fix(header): navbar overflow only on x axis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,5 +12,5 @@
 
 html {
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-x: hidden;
 }
